# SuperChic

./: CMakeLists.txt  ChangeLog  Dockerfile  README  README.md  get_env_var.c  makefile  makefile.make  superchic-4.2p2.patch
.github/: Dockerfile
.github/workflows/: publish.yml
SF/: apfelsf.f
cmake/Modules/: FindAPFEL.cmake  FindHepMC2.cmake  FindPythia8.cmake  FindRivet.cmake  FindYODA.cmake
doc/: references.bib  superchic.tex
doc_tex/: superchic4.2.tex
src/DHELAS/: FFV15_0.f  FFV15_0_ll.f  FFV15_1.f  FFV15_1_ll.f  FFV15_2.f  FFV15_2_ll.f  FFV1P0_3.f  FFV1_0_ionem.f  FFV1_0_ll.f  FFV1_1.f  FFV1_1_ionem.f  FFV1_1_ll.f  FFV1_2_ionem.f  FFV1_2_ll.f  FFV2_0.f  FFV2_0_ll.f  FFV2_1.f  FFV2_1_ll.f  FFV2_2.f  FFV2_2_ll.f  FFV2_3.f  FFV3_1.f  FFV3_2.f  FFV3_3.f  FFV5_1.f  FFV5_3.f  VVS1_0.f  VVS1_3.f  VVV1P0_1.f  VVV1_0.f  VVV1_1.f  VVV1_2.f  VVV1_3.f  VVVV2P0_1.f  VVVV2_0.f  VVVV5_0.f  VVVV5_4.f  aloha_file.inc  aloha_functions.f
src/LbyL/: B0F2M.f  C01_gen.f  D0404M.f  eett_aux.f  xspenz.f
src/MG/: cs_SF_SD.f  cs_ion_em.f  is_born.f  matrix_aall_SM.f  matrix_aall_SM.f~  matrix_ad.f  matrix_adb.f  matrix_au.f  matrix_aub.f  matrix_cub.f  matrix_dbsb.f  matrix_dbub.f  matrix_ds.f  matrix_du.f  matrix_dub.f  matrix_gamq_gamgamq.f  matrix_sdb.f  matrix_ubcb.f  matrix_uc.f  matrix_udb.f  mgcross.f  wwpol_match.f
src/MODEL/: couplings.f  couplings1.f  couplings2.f  intparam_definition.inc  lha_read.f  model_functions.inc  rw_para.f
src/PDFs/: PDF.f  PDFlha.f  PDFuser.f  alphas.f  alphasuser.f  inpdf.f  inpdfuser.f
src/diss/: CB.f  CLAS.f  Elastic.f  F1F2.f  F2ev.f  alphaEM.f  apfelinit.f  gd-fit-11.f  qinit.f  rfit.f
src/inc/: beam.f  bin.f  btmaxmin.f  coupl.inc  decay.f  diff.f  diss.f  eff.f  egam0.f  elcollw.f  ewsf.f  fbeam.f  forward.f  gamma.f  gax.f  gdr.f  gmatrices_comb.f  head.f  hepevt.f  inparticle.f  intag.f  ion.f  ion_inel.f  ionqcd.f  jetalg.f  jz2.f  lbylamps.f  lep.f  mandelstam.f  mcharg.f  mes.f  mfact.f  mhvpars.f  mion.f  mkp.f  mom.f  monopar.f  mp.f  mq.f  mt.f  (+50 more)
src/init/: calcop.f  calcscreen.f  dd.f  dd_test.f  init.f  inithg.f  initpars.f  initsud.f  opacity.f  opacityint.f  screening.f  sdcoh.f  sdincoh.f
src/inition/: gdr_int.f  gdrin.f  ioninit.f  ionpars.f  opacp.f  opacpb.f  opacpbcalc.f  opacpbint.f  opacpbp.f  opacpbpcalc.f  opacpbpint.f  opacpcalc.f  opacpint.f  rho.f  rhonorm.f  rhoxy.f  rhoxycalc.f  rhoxyint.f  s2qcdion.f  s2qcdionp.f  screen.f  screen_01.f  screencalc.f  screeno.f  sudgam.f  tp.f  tpcalc.f  tpqcd.f  tpqcdcalc.f  tpqcdint.f
src/int/: ran.f  rann.f  vegas.f
src/main/: bare.f  header.f  header_out.f  main.f  process.f  superchic.f  superchic.f.orig  wtgen.f  wtgengam.f
src/mes/: calcmes.f  mesint.f  wfinit.f  wfoctet.f  wfsinglet.f
src/phase/: 2body.f  2bodyinit.f  2bodyw.f  2jetps.f  2jetpsm.f  3body.f  3bodyinit.f  3jetps.f  4body.f  4bodyinit.f  6body.f  6bodyinit.f  AAinit.f  alpdecay.f  boost.f  chic0decay3.f  chic1decay2f.f  chic1decay2s.f  chic1decay3.f  chic2decay2f.f  chic2decay2s.f  chic2decay3.f  chidecay.f  genpol1.f  genpol1rf.f  genpol2.f  genpol_axial.f  jpsidecay.f  jpsidecayphot.f  monow.f  pAboost.f  pAinit.f  rambo.f  rhodecay.f  wwcorr.f  wwmix.f
src/sPDFs/: Sudakov.f  calchg.f  hg.f  hpdfint.f  sPDF.f  sudint.f
src/subamps/: alp.f  chi0.f  chi1.f  chi2.f  diphoton.f  djpsi.f  djpsip.f  djpsipp.f  eta.f  etaeta.f  etaetap.f  etapetap.f  etaq.f  gggjets.f  ggjets.f  higgs.f  higgsgam.f  higgsgaminit.f  higgsinit.f  lightlightpol.f  lloff.f  lloff_MG.f  lloff_MG.f~  llpol.f  mhv.f  mmpol.f  monop.f  pipi.f  pipixy.f  qqgjets.f  qqjets.f  rhorho.f  spinors.f  wwoff.f  wwoff_amp.f  wwpol.f
src/surv/: betaionex.f  formfac.f  formfacgam.f  formfacgamel.f  formfacgamion.f  formfacgamionp.f  formfacgamionp_backup.f  formfacgamoff.f  formfacgamoff_ion.f  formfacgamoff_ion_surv.f  formfacgamoff_surv.f  formfacphot.f  formfacphotionp.f  initparsr.f  readscreen.f  readscreenion.f  s2_diss_init.f  s2_diss_int.f  screeningint.f  screeningionint.f  seik.f  seikgam.f  seikgamion.f  seikgamion_23Nov.f  seikion.f  seikion_backyp.f  seikphot.f  seikphotionp.f  tpint.f
src/unw/: headerlhe.f  hepmcfunc.f  unweight.f  unweight_q.f  unwprint.f  unwprint.f~  unwprint_q.f  unwprint_q.f~
src/user/: cuts.f  histo.f
src/var/: gaminit.f  gaminit_o.f  gauss.f  mu.f  nf.f  string.f  varfuncs.f
src_old/DHELAS/: FFV1_0.f  FFV1_2.f  FFV2_0.f  FFV2_2.f  FFV2_3.f  FFV3_0.f  FFV5_0.f  FFV5_2.f  FFV5_3.f  VVV1P0_1.f  VVV1_2.f  VVVV5_0.f  aloha_functions.f
src_old/LbyL/: B0F2M.f  C01_gen.f  xspenz.f
src_old/MG/: matrix_dbub.f  wwpol_match.f
src_old/MODEL/: coupl.inc  couplings.f  intparam_definition.inc
src_old/PDFs/: PDFlha.f  alphas.f  inpdf.f
src_old/diss/: CB.f  CLAS.f  apfelinit.f  gd-fit-11.f  qinit.f  rfit.f
src_old/inc/: anom.f  axial.f  bpsi.f  brs.f  enew.f  ewpars.f  gaussvars.f  gcoh.f  gencuts.f  genunw.f  gmatrices.f  head.f.in  hgpars.f  ion.f  iteration.f  lab.f  lbylfac.f  leshouches.f  mes.f  mesflag.f  meta.f  mixing.f  mn.f  mpip.f  mres.f  mxs.f  nsurv.f  opac.f  opacpbppars.f  p0Xn.f  pdg.f  pgdr.f  photo.f  pi.f  prec.f  proc.f  pvfun.f  quarkonia.f  record.f  rhoxypars.f  (+15 more)
src_old/init/: calcscreen.f  dd.f  dd_test.f  init.f  initpars.f  initsud.f  screening.f  sdcoh.f
src_old/inition/: betaion.f  gdr_int.f  opacp.f  opacpb.f  opacpbpcalc.f  rhonorm.f  rhoxycalc.f  rhoxyint.f  screeno.f  tpqcdint.f
src_old/main/: header.f  main.f  superchic.f  wtgengam.f
src_old/mes/: calcmes.f  wfsinglet.f
src_old/phase/: 2bodyinit.f  2jetpsm.f  3body.f  3bodyinit.f  3jetps.f  4body.f  4bodyinit.f  6bodyinit.f  AAinit.f  boost.f  chic2decay2f.f  genpol1.f  jpsidecay.f  rambo.f  rhodecay.f
src_old/sPDFs/: calcsud.f  hpdfint.f  sPDF.f  sudint.f
src_old/subamps/: chi1.f  chi2.f  (+14 more)
test/: CMakeLists.txt  SCKINEMATICS.cc  input.DAT_1  input.DAT_10  input.DAT_2  input.DAT_3  input.DAT_4  input.DAT_8  input.DAT_9  input.DAT_FCC350eeunw  input.DAT_LHC13AAunw  input.DAT_LHC13pAunw  input.DAT_LHC13ppunw  input.DAT_PROCESS  shower.cxx  validator.cxx  validator.cxx.orig
test/Debug/: HepMC3.h
(+19 files in other folders)
